refactor : mvcv패턴을 준수하기 위한 리팩토링 -서비스 계층에서만 db조작이 가능하게변경 -구조 변경으로인한 순환참조 개선